--- a/index.html
+++ b/index.html
@@ -5,95 +5,180 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
-<body>
-    <header>
-        <a href="/">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="">студия</a></li>
-                <li><a href="">портфолио</a></li>
-                <li><a href="">контакты</a></li>
+<body class="page">
+        <header class="header">
+        <a href="/" class="header-link>">WebStudio</a>
+        <nav class="header-nav">
+            <ul class="header-list">
+                <li class="header-item"><a href="" class="header-link1">Студия</a></li>
+                <li class="header-item"><a href="" class="header-link">Портфолио</a></li>
+                <li class="header-item"><a href="" class="header-link">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="header-item"><a class="header-tel" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="header-item"><a class="header-mail" href="tel:+380961111111">+38 096 111 11 11</a>
         </ul>
     </header>
     <main>
-        <section>
-            <h2>Эффективные решения для вашего бизнеса</h2>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h2>ЭФФЕКТИВНЫЙ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h2>
+            <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         <section>
 
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <ul class="hero-list">
+                <li class="hero-item">
+                    <h3 class="text1">Внимание к деталям</h3>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="hero-item">
+                    <h3 class="text1">Пунктуальность</h3>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="hero-item">
+                    <h3 class="text1">Планирование</h3>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="hero-item">
+                    <h3 class="text1">Современные технологии</h3>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li> <img src="./images/box1.jpg" alt="work on tablet" width="370" height="294" /></li>
-                <li> <img src="./images/box2.jpg" alt="work on PC" width="370" height="294" /></li>
-                <li> <img src="./images/box3.jpg" alt="work on tablet2" width="370" height="294" /></li>
+            <ul class="about">
+                <li class="about-list"> <img src="./images/box1.jpg" alt="work on tablet" width="370" height="294" /></li>
+                <li class="about-list"> <img src="./images/box2.jpg" alt="work on PC" width="370" height="294" /></li>
+                <li class="about-list"> <img src="./images/box3.jpg" alt="work on tablet2" width="370" height="294" /></li>
             </ul>
         </section>
-        <section>
+        <section class="about-us">
             <h2>Наша команда</h2>
-            <ul>
-                <li>
+            <ul class="about1">
+                <li class="abuot1-link">
                     <img src="./images/img.jpg" alt="product designer" width="270" height="260" />
                     <h3>Игорь Демьяненко</h3>
-                    <p lang="en"> Product Designer</p>
+                    <p class="about" lang="en"> Product Designer</p>
                 </li>
-                <li>
+                <li class="abuot1-link">
                     <img src="./images/img1.jpg" alt="Frontend Developer" width="270" height="260" />
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p class="about">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="abuot1-link">
                     <img src="./images/img2.jpg" alt="Marketing" width="270" height="260" />
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="about">Marketing</p>
                 </li>
-                <li>
+                <li class="abuot1-link">
                     <img src="./images/img3.jpg" alt="UI Designer" width="270" height="260" />
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p class="about">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="contacts">
         <a href="/">WebStudio</a>
         <address>
-            <ul>
-                <li> <a href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li> <a href="mailto:info@example.com">info@example.com</a></li>
-                <li> <a href="telto:+380991111111">+38 099 111 11 11</a></li>
+            <ul class="adress">
+    <li class="adress-item"> <a class="adress-list" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси
+            Украинки, 26</a></li>
+    <li class="adress-item"> <a class="adress-list" href="mailto:info@example.com">info@example.com</a></li>
+    <li class="adress-item"> <a class="adress-list" href="telto:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+        </address>
+    </footer>
+    <header>
+        <a href="/">WebStudio</a>
+        <nav>
+            <ul class="header-list">
+                <li class="header-item"><a href="" class="header-link">Студия</a></li>
+                <li class="header-item"><a href="" class="header-link2">Портфолио</a></li>
+                <li class="header-item"><a href="" class="header-link">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li class="header-item"><a class="header-tel" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="header-item"><a class="header-mail" href="tel:+380961111111">+38 096 111 11 11</a>
+            
+        </ul>
+    </header>
+    <section class="button-all">
+                <button type="button" class="button-all1">Все</button>
+                <button type="button" class="button-all">Веб-сайты</button>
+                <button type="button"class="button-all">Приложения</button>
+                <button type="button"class="button-all">Дизайн</button>
+                <button type="button"class="button-all">Маркетинг</button>
+    </section>
+    <section>
+                <ul>
+            <li>
+                <img src="./images/img4.jpg" alt="product designer" width="370" height="294" />
+                <h3>Технокряк</h3>
+                <p class="about">Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/img5.jpg" alt="Frontend Developer" width="370" height="294" />
+                <h3>Постер New Orlean vs Golden Star</h3>
+                <p class="about">Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/img6.jpg" alt="Marketing" width="370" height="294" />
+                <h3>Ресторан Seafood</h3>
+                <p class="about">Приложение</p>
+            </li>
+            <li>
+                <img src="./images/img7.jpg" alt="UI Designer" width="370" height="294" />
+                <h3>Проект Prime</h3>
+                <p class="about">Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/img8.jpg" alt="UI Designer" width="370" height="294" />
+                <h3>Проект Boxes</h3>
+                <p class="about">Приложение</p>
+            </li>
+            <li>
+                <img src="./images/img9.jpg" alt="UI Designer" width="370" height="294" />
+                <h3>Inspiration has no Borders</h3>
+                <p class="about">Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/img10.jpg" alt="UI Designer" width="370" height="294" />
+                <h3>Издание Limited Edition</h3>
+                <p class="about">Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/img11.jpg" alt="UI Designer" width="370" height="294" />
+                <h3>Проект LAB</h3>
+                <p class="about">Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/img12.jpg" alt="UI Designer" width="370" height="294" />
+                <h3>Growing Business</h3>
+                <p class="about">Приложение</p>
+            </li>
+        </ul>
+    </section>
+    <footer class="contacts">
+        <a class= "adress-list" href="/">WebStudio</a>
+        <address class="adress">
+            <ul class="adress">
+                <li class="adress-item"> <a class="adress-list" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="adress-item"> <a class="adress-list" href="mailto:info@example.com">info@example.com</a></li>
+                <li class="adress-item"> <a class="adress-list" href="telto:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
-</body>
 
 </html>
