--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
             </ul>
         </nav>
         <ul>
-            <li class="header-item"><a class="header-tel" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <li class="header-item"><a class="header-mail" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="header-item"><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="header-item"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </ul>
     </header>
     <main>
         <section class="hero">
-            <h2>ЭФФЕКТИВНЫЙ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h2>
+            <h2>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h2>
             <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         <section>
 
             <ul class="hero-list">
                 <li class="hero-item">
-                    <h3 class="text1">Внимание к деталям</h3>
+                    <h3 class="text1">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="hero-item">
-                    <h3 class="text1">Пунктуальность</h3>
+                    <h3 class="text1">ПУНКТУАЛЬНОСТЬ</h3>
                     <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="hero-item">
-                    <h3 class="text1">Планирование</h3>
+                    <h3 class="text1">ПЛАНИРОВАНИЕ</h3>
                     <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="hero-item">
-                    <h3 class="text1">Современные технологии</h3>
+                    <h3 class="text1">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -65,22 +65,22 @@
         <section class="about-us">
             <h2>Наша команда</h2>
             <ul class="about1">
-                <li class="abuot1-link">
+                <li class="about1-link">
                     <img src="./images/img.jpg" alt="product designer" width="270" height="260" />
                     <h3>Игорь Демьяненко</h3>
                     <p class="about" lang="en"> Product Designer</p>
                 </li>
-                <li class="abuot1-link">
+                <li class="about1-link">
                     <img src="./images/img1.jpg" alt="Frontend Developer" width="270" height="260" />
                     <h3>Ольга Репина</h3>
                     <p class="about">Frontend Developer</p>
                 </li>
-                <li class="abuot1-link">
+                <li class="about1-link">
                     <img src="./images/img2.jpg" alt="Marketing" width="270" height="260" />
                     <h3>Николай Тарасов</h3>
                     <p class="about">Marketing</p>
                 </li>
-                <li class="abuot1-link">
+                <li class="about1-link">
                     <img src="./images/img3.jpg" alt="UI Designer" width="270" height="260" />
                     <h3>Михаил Ермаков</h3>
                     <p class="about">UI Designer</p>
@@ -101,7 +101,7 @@
     </footer>
     <header>
         <a href="/">WebStudio</a>
-        <nav>
+        <nav> 
             <ul class="header-list">
                 <li class="header-item"><a href="" class="header-link">Студия</a></li>
                 <li class="header-item"><a href="" class="header-link2">Портфолио</a></li>
