--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <body class="page">
         <header class="header">
         <a href="/" class="header-link>">WebStudio</a>
+
         <nav class="header-nav">
             <ul class="header-list">
                 <li class="header-item"><a href="" class="header-link1">Студия</a></li>
-                <li class="header-item"><a href="" class="header-link">Портфолио</a></li>
+                <li class="header-item"><a href="./portfolio.html" class="header-link">Портфолио</a></li>
                 <li class="header-item"><a href="" class="header-link">Контакты</a></li>
             </ul>
         </nav>
@@ -92,93 +93,13 @@
         <a href="/">WebStudio</a>
         <address>
             <ul class="adress">
-    <li class="adress-item"> <a class="adress-list" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси
+    <li class="adress-item"> <a class="adress-link" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси
             Украинки, 26</a></li>
-    <li class="adress-item"> <a class="adress-list" href="mailto:info@example.com">info@example.com</a></li>
-    <li class="adress-item"> <a class="adress-list" href="telto:+380991111111">+38 099 111 11 11</a></li>
+    <li class="adress-item"> <a class="adress-link2" href="mailto:info@example.com">info@example.com</a></li>
+    <li class="adress-item"> <a class="adress-link2" href="telto:+380991111111">+38 099 111 11 11</a></li>
         </ul>
         </address>
     </footer>
-    <header>
-        <a href="/">WebStudio</a>
-        <nav> 
-            <ul class="header-list">
-                <li class="header-item"><a href="" class="header-link">Студия</a></li>
-                <li class="header-item"><a href="" class="header-link2">Портфолио</a></li>
-                <li class="header-item"><a href="" class="header-link">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li class="header-item"><a class="header-tel" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <li class="header-item"><a class="header-mail" href="tel:+380961111111">+38 096 111 11 11</a>
-            
-        </ul>
-    </header>
-    <section class="button-all">
-                <button type="button" class="button-all1">Все</button>
-                <button type="button" class="button-all">Веб-сайты</button>
-                <button type="button" class="button-all">Приложения</button>
-                <button type="button" class="button-all">Дизайн</button>
-                <button type="button" class="button-all">Маркетинг</button>
-    </section>
-    <section>
-                <ul>
-            <li>
-                <img src="./images/img4.jpg" alt="product designer" width="370" height="294" />
-                <h3>Технокряк</h3>
-                <p class="about">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/img5.jpg" alt="Frontend Developer" width="370" height="294" />
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p class="about">Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/img6.jpg" alt="Marketing" width="370" height="294" />
-                <h3>Ресторан Seafood</h3>
-                <p class="about">Приложение</p>
-            </li>
-            <li>
-                <img src="./images/img7.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Проект Prime</h3>
-                <p class="about">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/img8.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Проект Boxes</h3>
-                <p class="about">Приложение</p>
-            </li>
-            <li>
-                <img src="./images/img9.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Inspiration has no Borders</h3>
-                <p class="about">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/img10.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Издание Limited Edition</h3>
-                <p class="about">Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/img11.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Проект LAB</h3>
-                <p class="about">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/img12.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Growing Business</h3>
-                <p class="about">Приложение</p>
-            </li>
-        </ul>
-    </section>
-    <footer class="contacts">
-        <a class= "adress-list" href="/">WebStudio</a>
-        <address class="adress">
-            <ul class="adress">
-                <li class="adress-item"> <a class="adress-list" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="adress-item"> <a class="adress-list" href="mailto:info@example.com">info@example.com</a></li>
-                <li class="adress-item"> <a class="adress-list" href="telto:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
-    </footer>
+    
 
 </html>
