--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
-            <ul class="about">
+            <ul class="about-work">
                 <li class="about-list"> <img src="./images/box1.jpg" alt="work on tablet" width="370" height="294" /></li>
                 <li class="about-list"> <img src="./images/box2.jpg" alt="work on PC" width="370" height="294" /></li>
                 <li class="about-list"> <img src="./images/box3.jpg" alt="work on tablet2" width="370" height="294" /></li>
@@ -68,22 +68,22 @@
             <ul class="about1">
                 <li class="about1-link">
                     <img src="./images/img.jpg" alt="product designer" width="270" height="260" />
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="name">Игорь Демьяненко</h3>
                     <p class="about" lang="en"> Product Designer</p>
                 </li>
                 <li class="about1-link">
                     <img src="./images/img1.jpg" alt="Frontend Developer" width="270" height="260" />
-                    <h3>Ольга Репина</h3>
+                    <h3 class="name">Ольга Репина</h3>
                     <p class="about">Frontend Developer</p>
                 </li>
                 <li class="about1-link">
                     <img src="./images/img2.jpg" alt="Marketing" width="270" height="260" />
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="name">Николай Тарасов</h3>
                     <p class="about">Marketing</p>
                 </li>
                 <li class="about1-link">
                     <img src="./images/img3.jpg" alt="UI Designer" width="270" height="260" />
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="name">Михаил Ермаков</h3>
                     <p class="about">UI Designer</p>
                 </li>
             </ul>
