--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <title>portfolio</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <header>
-        <a href="/">WebStudio</a>
-        <nav>
+    <header class="header">
+        <a href="/" class="header-link>">WebStudio</a>
+        <nav class="header-nav">
             <ul class="header-list">
                 <li class="header-item"><a href="" class="header-link2">Студия</a></li>
                 <li class="header-item"><a href="" class="header-link3">Портфолио</a></li>
@@ -17,13 +22,13 @@
             </ul>
         </nav>
         <ul>
-            <li class="header-item"><a class="header-tel" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <li class="header-item"><a class="header-mail" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="header-item"><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="header-item"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     
         </ul>
     </header>
     <section class="button-all">
-        <button type="button" class="button-all1">Все</button>
+        <button type="button" class="button-all-main">Все</button>
         <button type="button" class="button-all">Веб-сайты</button>
         <button type="button" class="button-all">Приложения</button>
         <button type="button" class="button-all">Дизайн</button>
@@ -82,7 +87,7 @@
         <a class="adress-list" href="/">WebStudio</a>
         <address class="adress">
             <ul class="adress">
-                <li class="adress-item"> <a class="adress-link2" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т
+                <li class="adress-item"> <a class="adress-link" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т
                         Леси Украинки, 26</a></li>
                 <li class="adress-item"> <a class="adress-link2" href="mailto:info@example.com">info@example.com</a></li>
                 <li class="adress-item"> <a class="adress-link2" href="telto:+380991111111">+38 099 111 11 11</a></li>
