--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,28 +27,29 @@
     
         </ul>
     </header>
+    <main>
     <section class="button-all">
-        <button type="button" class="button-all-main">Все</button>
-        <button type="button" class="button-all">Веб-сайты</button>
-        <button type="button" class="button-all">Приложения</button>
-        <button type="button" class="button-all">Дизайн</button>
-        <button type="button" class="button-all">Маркетинг</button>
-    </section>
-    <section>
+        <ul>
+        <li><button type="button" class="button-all-main">Все</button></li>
+        <li><button type="button" class="button-all">Веб-сайты</button></li>
+        <li><button type="button" class="button-all">Приложения</button></li>
+        <li><button type="button" class="button-all">Дизайн</button></li>
+        <li><button type="button" class="button-all">Маркетинг</button></li>
+        </ul>
         <ul class="about2">
             <li class="about2-link">
                 <img src="./images/img4.jpg" alt="product designer" width="370" height="294" />
-                <h3>Технокряк</h3>
+                <h2>Технокряк</h2>
                 <p class="about">Веб-сайт</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img5.jpg" alt="Frontend Developer" width="370" height="294" />
-                <h3>Постер New Orlean vs Golden Star</h3>
+                <h2>Постер New Orlean vs Golden Star</h2>
                 <p class="about">Дизайн</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img6.jpg" alt="Marketing" width="370" height="294" />
-                <h3>Ресторан Seafood</h3>
+                <h2>Ресторан Seafood</h2>
                 <p class="about">Приложение</p>
             </li>
             <li class="about2-link">
@@ -58,31 +59,32 @@
             </li>
             <li class="about2-link">
                 <img src="./images/img8.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Проект Boxes</h3>
+                <h2>Проект Boxes</h2>
                 <p class="about">Приложение</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img9.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Inspiration has no Borders</h3>
+                <h2>Inspiration has no Borders</h2>
                 <p class="about">Веб-сайт</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img10.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Издание Limited Edition</h3>
+                <h2>Издание Limited Edition</h2>
                 <p class="about">Дизайн</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img11.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Проект LAB</h3>
+                <h2>Проект LAB</h2>
                 <p class="about">Маркетинг</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img12.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Growing Business</h3>
+                <h2>Growing Business</h2>
                 <p class="about">Приложение</p>
             </li>
         </ul>
     </section>
+    </main>
     <footer class="contacts">
         <a class="adress-list" href="/">WebStudio</a>
         <address class="adress">
