update.index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body class="page">
         <header class="header">
-        <a href="/" class="header-link>">WebStudio</a>
-
+        <a href="/" class="header-link>"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li class="header-item"><a href="" class="header-link1">Студия</a></li>
@@ -25,8 +24,8 @@
             </ul>
         </nav>
         <ul>
-            <li class="header-item"><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <li class="header-item"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="header-item"><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="header-item"><a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
         </ul>
     </header>
     <main>
@@ -90,7 +89,7 @@
         </section>
     </main>
     <footer class="contacts">
-        <a href="/">WebStudio</a>
+        <a href="/"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
         <address>
             <ul class="adress">
     <li class="adress-item"> <a class="adress-link" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси
