--- a/portfolio.html
+++ b/portfolio.html
@@ -9,21 +9,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <title>portfolio</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-link>">WebStudio</a>
+        <a href="/" class="header-link>"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
-                <li class="header-item"><a href="" class="header-link2">Студия</a></li>
+                <li class="header-item"><a href="./index.html" class="header-link2">Студия</a></li>
                 <li class="header-item"><a href="" class="header-link3">Портфолио</a></li>
                 <li class="header-item"><a href="" class="header-link2">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li class="header-item"><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <li class="header-item"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="header-item"><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="header-item"><a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
     
         </ul>
     </header>
@@ -86,7 +86,7 @@
     </section>
     </main>
     <footer class="contacts">
-        <a class="adress-list" href="/">WebStudio</a>
+        <a class="adress-list" href="/"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
         <address class="adress">
             <ul class="adress">
                 <li class="adress-item"> <a class="adress-link" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т
