--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section class="hero">
-            <h2>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h2>
+            <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         <section>
@@ -55,7 +55,7 @@
             </ul>
         </section>
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="work-what">Чем мы занимаемся</h2>
             <ul class="about-work">
                 <li class="about-list"> <img src="./images/box1.jpg" alt="work on tablet" width="370" height="294" /></li>
                 <li class="about-list"> <img src="./images/box2.jpg" alt="work on PC" width="370" height="294" /></li>
