--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav class="header-nav">
             <ul class="header-list">
                 <li class="header-item"><a href="" class="header-link1">Студия</a></li>
-                <li class="header-item"><a href="./portfolio.html" class="header-link">Портфолио</a></li>
-                <li class="header-item"><a href="" class="header-link">Контакты</a></li>
+                <li class="header-item"><a href="./portfolio.html" class="header-contacts">Портфолио</a></li>
+                <li class="header-item"><a href="" class="header-contacts">Контакты</a></li>
             </ul>
         </nav>
         <ul>
