--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-link>"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
+        <a href="/" class="header-link"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li class="header-item"><a href="./index.html" class="header-link2">Студия</a></li>
@@ -86,7 +86,7 @@
     </section>
     </main>
     <footer class="contacts">
-        <a class="adress-list" href="/"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
+        <a href="/" class="adress-list"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
         <address class="adress">
             <ul class="adress">
                 <li class="adress-item"> <a class="adress-link" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т
