--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="page">
         <header class="header">
-        <a href="/" class="header-link>"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
+        <a href="/" class="header-link"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li class="header-item"><a href="" class="header-link1">Студия</a></li>
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer class="contacts">
-        <a href="/"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
+        <a href="/" class="adress-list"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
         <address>
             <ul class="adress">
     <li class="adress-item"> <a class="adress-link" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси
