--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <nav class="header-nav">
             <ul class="header-list">
                 <li class="header-item"><a href="./index.html" class="header-link">Студия</a></li>
-                <li class="header-item"><a href="" class="current">Портфолио</a></li>
+                <li class="header-item"><a href="" class="current1">Портфолио</a></li>
                 <li class="header-item"><a href="" class="header-link">Контакты</a></li>
             </ul>
         </nav>
